--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(testC C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(testC main.c tree/treeQuiz.c tree/treeQuiz.h queue/queueQuiz.c)
+add_executable(testC main.c tree/treeQuiz.c tree/treeQuiz.h queue/queueQuiz.c queue/queueQuiz.h base/base.h)
