--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(testC C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(testC main.c tree/treeQuiz.c tree/treeQuiz.h queue/queueQuiz.c queue/queueQuiz.h base/base.h queue/queueData.h)
+add_executable(testC main.c tree/base/treeQuiz.c tree/base/treeQuiz.h queue/base/queueQuiz.c queue/base/queueQuiz.h base/base.h queue/base/queueData.h list/base/listQuiz.c list/base/listQuiz.h list/base/listData.h list/solution/listSolution.c list/solution/listSolution.h tree/base/treeData.h
+        train/TrainStart.c
+        train/TrainStart.h
+)
